tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_match_no_shadow_global/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected a struct, enum, or literal pattern, but found a function
  ┌─ src/main.nr:4:17
  │
4 │                 crate::foo => (),
  │                 ----------
  │

Aborting due to 1 previous error
