tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_match_no_shadow_global/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected a struct, enum, or literal pattern, but found a function
  ┌─ src/main.nr:4:17
  │
4 │                 crate::foo => (),
  │                 ----------
  │

Aborting due to 1 previous error
